--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,7 +21,7 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="http://localhost:5000/">Home <span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net/">Home <span class="sr-only">(current)</span></a>
 			      </li>
 			    </ul>
 			  </div>
@@ -44,10 +44,10 @@
 				<div class="row">
 					<div class="offset-lg-3"></div>
 					<div class="col-lg-3 mt-1 mb-1">
-						<a class="btn btn-lg btn-dark btn-block" href="http://localhost:5000/get_customer_details">Get Recommendations</a>
+						<a class="btn btn-lg btn-dark btn-block" href="https://recommendteamchn.eu-gb.mybluemix.net/get_customer_details">Get Recommendations</a>
 					</div>
 					<div class="col-lg-3 mt-1 mb-1">
-						<a class="btn btn-lg btn-dark btn-block" href="http://localhost:5000/train_model">Train Model</a>
+						<a class="btn btn-lg btn-dark btn-block" href="https://recommendteamchn.eu-gb.mybluemix.net/train_model">Train Model</a>
 					</div>
 				</div>
 			</div>
