--- a/templates/customer_details.html
+++ b/templates/customer_details.html
@@ -14,7 +14,7 @@
    	<div class="container-fluid">
    		<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
 
-		  <a class="navbar-brand" href="http://localhost:5000/">Banking Recommendation System</a>
+		  <a class="navbar-brand" href="https://recommendteamchn.eu-gb.mybluemix.net/">Banking Recommendation System</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -22,7 +22,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="http://localhost:5000/">Home <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net/">Home <span class="sr-only">(current)</span></a>
 		      </li>
 		    </ul>
 		  </div>
@@ -45,7 +45,7 @@
 			<div class="row mt-4">
 				<div class="offset-lg-4"></div>
 				<div class="col-lg-4">
-					<form action="http://localhost:5000/predicted_results" method="POST">
+					<form action="https://recommendteamchn.eu-gb.mybluemix.net/predicted_results" method="POST">
 					  <div class="form-group">
 					    <label for="CustomerID">Customer Id</label>
 					    <input type="text" pattern="\d*" maxlength="15" class="form-control form-control-lg" id="CustomerID" name="CustomerID" placeholder="Enter Customer Id" required>
