--- a/templates/predicted_results.html
+++ b/templates/predicted_results.html
@@ -17,7 +17,7 @@
    	<div class="container-fluid">
    		<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
 
-		  <a class="navbar-brand" href="http://localhost:5000/">Banking Recommendation System</a>
+		  <a class="navbar-brand" href="https://recommendteamchn.eu-gb.mybluemix.net/">Banking Recommendation System</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -25,7 +25,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="http://localhost:5000/">Home <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net/">Home <span class="sr-only">(current)</span></a>
 		      </li>
 		    </ul>
 		  </div>
