--- a/templates/train_model.html
+++ b/templates/train_model.html
@@ -14,7 +14,7 @@
    	<div class="container-fluid">
    		<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
 
-		  <a class="navbar-brand" href="http://localhost:5000/">Banking Recommendation System</a>
+		  <a class="navbar-brand" href="https://recommendteamchn.eu-gb.mybluemix.net/">Banking Recommendation System</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -22,7 +22,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="http://localhost:5000/">Home <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net/">Home <span class="sr-only">(current)</span></a>
 		      </li>
 		    </ul>
 		  </div>
@@ -43,7 +43,7 @@
 				<div class="row">
 					<div class="offset-lg-4"></div>
 					<div class="col-lg-6">
-						<form class="form-inline" method="POST" action="http://localhost:5000/train_model">
+						<form class="form-inline" method="POST" action="https://recommendteamchn.eu-gb.mybluemix.net/train_model">
 						  <div class="form-group">
 						    <input type="file" class="form-control-file btn btn-lg btn-dark btn-block" id="UploadData">
 						  </div>
