--- a/templates/train_model.html
+++ b/templates/train_model.html
@@ -61,11 +61,11 @@
 						    <h3>Results</h3>
 						    <br>
 						    <ul class="list-group list-group-flush">
-							  <li class="list-group-item">Cras justo odio</li>
-							  <li class="list-group-item">Dapibus ac facilisis in</li>
-							  <li class="list-group-item">Morbi leo risus</li>
-							  <li class="list-group-item">Porta ac consectetur ac</li>
-							  <li class="list-group-item">Vestibulum at eros</li>
+							  <li class="list-group-item">Mortgage</li>
+							  <li class="list-group-item">Overdraft</li>
+							  <li class="list-group-item">Creditcard</li>
+							  <li class="list-group-item">Savings Account</li>
+							  
 							</ul>
 						  </div>
 						</div>
