--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,9 +11,9 @@
     <title>Home</title>
   </head>
   <body>
-   	<div class="container-fluid">
+   	<div class="container-fluid ">
    		<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
-			  <a class="navbar-brand" href="#">Banking Recommendation System</a>
+			<a class="navbar-brand" href="#"><h2>Banking Recommendation System</h2></a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
@@ -21,7 +21,7 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net/">Home <span class="sr-only">(current)</span></a>
+<!--			        <a class="nav-link" href="https://recommendteamchn.eu-gb.mybluemix.net">Home <span class="sr-only">(current)</span></a>-->
 			      </li>
 			    </ul>
 			  </div>
@@ -30,20 +30,70 @@
             </a>
 			</nav>
 
+
+
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="jumbotron jumbotron-fluid">
-			  		<div class="container">
-			    		<h1 class="display-4">App Description</h1>
-			    		<p class="lead">Using this application, you will be able to get recommendations about the services and products that a bank can offer to the customer based on their previous data!</p>
-			  		</div>
+					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+						  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+						  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+						  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+						  <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+						</ol>
+					<div class="carousel-inner">
+					  <div class="carousel-item active">
+						<img src="{{ url_for('static',filename='styles/Mortgage.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
+						<div class="carousel-caption d-none d-md-block header-text">
+						  <h2><span>Mortgage</span></h2>
+						  <h3><span>Debt instrument secured by the collateral of a real estate property, that the borrower is obliged to pay back with a predetermined set of payments.</span></h3>
+						</div>
+					  </div>
+					  <div class="carousel-item">
+						<img src="{{ url_for('static',filename='styles/CreditCard.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
+						<div class="carousel-caption d-none d-md-block header-text">
+						  <h2><span>Credit Card</span></h2>
+						  <h3><span>Enables cardholders to make purchases on credit. It comes with a pre-set credit limit which users can utilise to make purchases effortlessly.</span></h3>
+						</div>
+					  </div>
+
+					<div class="carousel-item">
+						<img src="{{ url_for('static',filename='styles/SavingsAcct.JPG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
+						<div class="carousel-caption d-none d-md-block header-text">
+						  <h2><span>Savings Account</span></h2>
+						  <h3><span>
+							<ul class="list-group">
+							  <li class="list-group-item">Savings Builder : Great for regular savers, with a balance under £10,000.</li>
+							  <li class="list-group-item">Instant Saver : Flexible saving without the need to deposit regularly</li>
+							  <li class="list-group-item">Premium Saver : Better suited for those with balances over £25,000.</li>
+							</ul>
+							</span></h3>
+						</div>
+					  </div>
+					   <div class="carousel-item">
+						<img src="{{ url_for('static',filename='styles/Overdraft.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
+						<div class="carousel-caption d-none d-md-block header-text">
+						  <h2><span>Overdraft</span></h2>
+						  <h3><span>Allows account holder to continue withdrawing money even when the account has no funds in it or has insufficient funds to cover the amount of the withdrawal.</span></h3>
+						</div>
+					  </div>
+
 					</div>
+					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  <span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  <span class="sr-only">Next</span>
+					</a>
+				  </div>
 				</div>
-			</div>
+			</div><br>
 			<div class="col-lg-12">
 				<div class="row">
-					<div class="offset-lg-3"></div>
-					<div class="col-lg-6 mt-1 mb-1">
+					<div class="offset-lg-4"></div>
+					<div class="col-lg-4 mt-3 mb-1">
 						<a class="btn btn-lg btn-dark btn-block" href="https://recommendteamchn.eu-gb.mybluemix.net/get_customer_details">Get Recommendations</a>
 					</div>
 				</div>
@@ -55,5 +105,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 	<script type="text/javascript">
+    $(document).ready(function(){
+      $('.carousel').carousel({
+        interval: 500
+      });
+    });
+  </script>
   </body>
 </html>
