--- a/templates/predicted_results.html
+++ b/templates/predicted_results.html
@@ -45,14 +45,20 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-4 col-lg-3 mb-4">
-                <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static',filename='styles/img_man.png') }}">
+                
+                   <div class="card">
+					{% if sex == "Male" %}
+         				<img class="card-img-top" src="{{ url_for('static',filename='styles/img_man.png') }}">
+    				{% else %}
+        				<img class="card-img-top" src="{{ url_for('static',filename='styles/img_women.png') }}">
+    				{% endif %}
                     <div class="card-block">
                         <h4 class="card-title">Customer Id : {{array_details[1]}}</h4>
                         <div class="meta">
                             <p class="text-primary">Age : {{array_details[2]}}</p>
                         </div>
                         <div class="card-text">
+				<p> Sex: {{sex}}</p>
                             <p> Monthly Income : {{array_details[4]}} </p>
 							<p> Credit Card Balance: {{array_details[5]}}</p>
 							<p> Mortgage Balance: {{array_details[6]}}</p>
