--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -58,7 +58,7 @@
 					  </div>
 
 					<div class="carousel-item">
-						<img src="{{ url_for('static',filename='styles/SavingsAcct.JPG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
+						<img src="{{ url_for('static',filename='styles/SavingsAcct.jpg') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
 						<div class="carousel-caption d-none d-md-block header-text">
 						  <h2><span>Savings Account</span></h2>
 						  <h3><span>
