--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -63,9 +63,9 @@
 						  <h2><span>Savings Account</span></h2>
 						  <h3><span>
 							<ul class="list-group">
-							  <li class="list-group-item">Savings Builder : Great for regular savers, with a balance under £10,000.</li>
-							  <li class="list-group-item">Instant Saver : Flexible saving without the need to deposit regularly</li>
-							  <li class="list-group-item">Premium Saver : Better suited for those with balances over £25,000.</li>
+							  <li class="list-group-item" style="background-color:#447171;">Savings Builder : Great for regular savers, with a balance under £10,000.</li>
+							  <li class="list-group-item" style="background-color:#447171;">Instant Saver : Flexible saving without the need to deposit regularly</li>
+							  <li class="list-group-item" style="background-color:#447171;">Premium Saver : Better suited for those with balances over £25,000.</li>
 							</ul>
 							</span></h3>
 						</div>
