--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -11,3 +11,81 @@
 .navbar-brand img{
 	border-radius: 2px;
 }
+
+html {
+    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+h5 {
+    font-size: 1.28571429em;
+    font-weight: 700;
+    line-height: 1.2857em;
+    margin: 0;
+}
+
+.card {
+    font-size: 1em;
+    overflow: hidden;
+    padding: 0;
+    border: none;
+    border-radius: .28571429rem;
+    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+}
+
+.card-block {
+    font-size: 1em;
+    position: relative;
+    margin: 0;
+    padding: 1em;
+    border: none;
+    border-top: 1px solid rgba(34, 36, 38, .1);
+    box-shadow: none;
+}
+
+.card-img-top {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.card-title {
+    font-size: 1.28571429em;
+    font-weight: 700;
+    line-height: 1.2857em;
+}
+
+.card-text {
+    clear: both;
+    margin-top: .5em;
+    color: rgba(0, 0, 0, .68);
+}
+
+#Custom-Jumbo{
+    margin-bottom : 4px !important;
+    padding : 10px !important;
+}
+
+.header-text {
+    position: relative;
+    left: 1.8%;
+    position: absolute;
+    background-color: #fff;
+    opacity: 0.75;
+    right: 1.8%;
+    color: #000;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.header-text h2 {
+    font-size: 40px;
+}
+
+.header-text h2 span {
+	padding: 10px;
+}
+.header-text h3 {
+    font-size: 20px;
+}
+
