--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,14 +46,14 @@
 						<img src="{{ url_for('static',filename='styles/Mortgage.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
 						<div class="carousel-caption d-none d-md-block header-text">
 						  <h2><span>Mortgage</span></h2>
-						  <h3 style="background-color:#497171;"><span>Debt instrument secured by the collateral of a real estate property, that the borrower is obliged to pay back with a predetermined set of payments.</span></h3>
+						  <h3><span>Debt instrument secured by the collateral of a real estate property, that the borrower is obliged to pay back with a predetermined set of payments.</span></h3>
 						</div>
 					  </div>
 					  <div class="carousel-item">
 						<img src="{{ url_for('static',filename='styles/CreditCard.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
 						<div class="carousel-caption d-none d-md-block header-text">
 						  <h2><span>Credit Card</span></h2>
-						  <h3 style="background-color:#497171;"><span>Enables cardholders to make purchases on credit. It comes with a pre-set credit limit which users can utilise to make purchases effortlessly.</span></h3>
+						  <h3><span>Enables cardholders to make purchases on credit. It comes with a pre-set credit limit which users can utilise to make purchases effortlessly.</span></h3>
 						</div>
 					  </div>
 
@@ -63,9 +63,9 @@
 						  <h2><span>Savings Account</span></h2>
 						  <h3><span>
 							<ul class="list-group">
-							  <li class="list-group-item" style="background-color:#497171;">Savings Builder : Great for regular savers, with a balance under £10,000.</li>
-							  <li class="list-group-item" style="background-color:#497171;">Instant Saver : Flexible saving without the need to deposit regularly</li>
-							  <li class="list-group-item" style="background-color:#497171;">Premium Saver : Better suited for those with balances over £25,000.</li>
+							  <li class="list-group-item">Savings Builder : Great for regular savers, with a balance under £10,000.</li>
+							  <li class="list-group-item">Instant Saver : Flexible saving without the need to deposit regularly</li>
+							  <li class="list-group-item">Premium Saver : Better suited for those with balances over £25,000.</li>
 							</ul>
 							</span></h3>
 						</div>
@@ -74,7 +74,7 @@
 						<img src="{{ url_for('static',filename='styles/Overdraft.PNG') }}" class="d-block w-100 img-fluid" alt="..." style="height:480px;">
 						<div class="carousel-caption d-none d-md-block header-text">
 						  <h2><span>Overdraft</span></h2>
-						  <h3 style="background-color:#497171;"><span>Allows account holder to continue withdrawing money even when the account has no funds in it or has insufficient funds to cover the amount of the withdrawal.</span></h3>
+						  <h3><span>Allows account holder to continue withdrawing money even when the account has no funds in it or has insufficient funds to cover the amount of the withdrawal.</span></h3>
 						</div>
 					  </div>
 
